js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-braceless-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
